objects/SpectrumQuoteSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Do_Not_Update_Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Update Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>The API name of the field that should be mapped.</description>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inner_Object_Of__c</fullName>
        <description>For future enhancement. Not used yet.</description>
        <label>Inner Object Of</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Name__c</fullName>
        <description>The JSON name mapping that should map to the Field API Name. This name will need to be agreed upon with the Spectrum team for any new fields/field changes.</description>
        <label>JSON Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Object__c</fullName>
        <label>JSON Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Quote_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Quote Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <description>The API name of the sObject to map to.</description>
        <label>sObject Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Spectrum Quote Settings</label>
</CustomObject>